--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -66,8 +66,8 @@
           />
         </div>
         <div class="form-group">
-          <label for="formFile" class="form-label">Upload a Profile Picture</label>
-          <input class="form-control" type="file" id="formFile" name="profile">
+          <label for="formFile" class="form-label">Upload Link To Profile Picture</label>
+          <input class="form-control item" name="profile" type="text" placeholder="Profile Picture URL" aria-label="default input example">
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-block create-account">
