--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -84,115 +84,99 @@
 
 /* Book Animation */
 
-a {
-  text-decoration: none; /* no underline */
-  all: unset;
-
-}
-
-.bookAnimation {
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  perspective: 1200px;
-  text-align: center;
-  color: white;
-  position: relative;
-}
-
 .book {
-  transform-style: preserve-3d;
-  position: relative;
-  height: 300px;
-  cursor: pointer;
-  backface-visibility: visible;
-}
-
-.front, .back, .page1, .page2, .page3, .page4, .page5, .page6 {
-  transform-style: preserve-3d;
   position: absolute;
-  width: 200px;
-  height: 100%;
-  top: 0; left: 0;
-  transform-origin: left center;
-  transition: transform .5s ease-in-out, box-shadow .35s ease-in-out;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 18.5rem;
+  height: 12.5rem;
+  perspective: 70rem;
 }
-
-.front, .back {
-  background: rgb(86, 86, 189);
+.cover {
+  background-color: #36354e;
+  transform: rotateY(0deg);
+  width: 9.25rem;
+  height: 12.5rem;
 }
-
-.front, .page1, .page3, .page5 {
-  border-bottom-right-radius: .5em;
-  border-top-right-radius: .5em;
+.page {
+  top: 0.25rem;
+  left: 0.25rem;
+  background-color: #e9e6c4;
+  transform: rotateY(0deg);
+  width: 9rem;
+  height: 12rem;
+  text-align: right;
+  font-size: 8px;
+  color: #777;
+  font-family: monospace;
 }
-
-.back, .page2, .page4, .page6 {
-  border-bottom-right-radius: .5em;
-  border-top-right-radius: .5em;
+.page::before, .page::after {
+  display: block;
+  border-top: 1px dashed rgba(0, 0, 0, 0.3);
+  content: "";
+  padding-bottom: 1rem;
 }
-
-.page1 { 
-  background: #efefef;
+.cover, .page {
+  position: absolute;
+  padding: 1rem;
+  transform-origin: 100% 0;
+  border-radius: 5px 0 0 5px;
+  box-shadow: inset 3px 0px 20px rgba(0, 0, 0, 0.2),
+    0px 0px 15px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
-
-.page2 {
-  background: #efefef;
+.cover.turn {
+  animation: bookCover 3s forwards;
 }
-
-.page3 {
-  background: #f5f5f5;
+.page.turn {
+  animation: bookOpen 3s forwards;
 }
-
-.page4 {
-  background: #f5f5f5;
+.page:nth-of-type(1) {
+  animation-delay: 0.05s;
 }
-
-.page5 {
-  background: #fafafa;
+.page:nth-of-type(2) {
+  animation-delay: 0.33s
 }
-
-.page6 {
-  background: #fdfdfd;
+.page:nth-of-type(3) {
+  animation-delay: 0.66s;
 }
-
-.book:hover .front {
-  transform: rotateY(-160deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+.page:nth-of-type(4) {
+  animation: bookOpen150deg 3s forwards;
+  animation-delay: 0.99s;
 }
-
-.book:hover .page1 {
-  transform: rotateY(-150deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+.page:nth-of-type(5) {
+  animation: bookOpen30deg 3s forwards;
+  animation-delay: 1.2s;
 }
-
-.book:hover .page2 {
-  transform: rotateY(-30deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+.page:nth-of-type(6) {
+  animation: bookOpen55deg 3s forwards;
+  animation-delay: 1.25s;
 }
-
-.book:hover .page3 {
-  transform: rotateY(-140deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+@keyframes bookOpen {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(180deg);
+    z-index: 999;}
 }
-
-.book:hover .page4 {
-  transform: rotateY(-40deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+@keyframes bookCover {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(180deg);
+    z-index: 1;}
 }
-
-.book:hover .page5 {
-  transform: rotateY(-130deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+@keyframes bookOpen150deg {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(150deg);
+    z-index: 999;}
 }
-
-.book:hover .page6 {
-  transform: rotateY(-50deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
+@keyframes bookOpen55deg {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(55deg);
+    z-index: 999;}
 }
-
-.book:hover .back {
-  transform: rotateY(-20deg) scale(1.1);
+@keyframes bookOpen30deg {
+  50% { z-index: 999 }
+  100% {  transform: rotateY(30deg);
+    z-index: 999;}
 }
