--- a/src/main/resources/static/styles/inspire.css
+++ b/src/main/resources/static/styles/inspire.css
@@ -25,10 +25,50 @@
          url('http://tangledindesign.com/codepen/fonts/Calluna-Regular-webfont.svg#CallunaRegular') format('svg');
 }
 
+        /* Letter Effect */
+
+        .poemHeader {
+            text-align: center;
+        }
+
+        .letter {
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            margin: 26px auto 0;
+            max-width: 550px;
+            min-height: 300px;
+            padding: 24px;
+            position: relative;
+            width: 80%;
+            color: black;
+          }
+          .letter:before, .letter:after {
+            content: "";
+            height: 98%;
+            position: absolute;
+            width: 100%;
+            z-index: -1;
+          }
+          .letter:before {
+            background: #fafafa;
+            box-shadow: 0 0 8px rgba(0,0,0,0.2);
+            left: -5px;
+            top: 4px;
+            transform: rotate(-2.5deg);
+          }
+          .letter:after {
+            background: #f6f6f6;
+            box-shadow: 0 0 3px rgba(0,0,0,0.2);
+            right: -3px;
+            top: 1px;
+            transform: rotate(1.4deg);
+          }
+
 body {
     background: #333;
     color: #fff;
 }
+
 
     .container {
         width: 590px;
@@ -118,3 +158,5 @@ body {
             }
 
         }
+
+
