--- a/src/main/resources/templates/inspire.html
+++ b/src/main/resources/templates/inspire.html
@@ -122,6 +122,20 @@
       </article>
     </section>
 
+    <br>
+
+    <section style="padding: 200px" data-th-each="p: ${poem}" >
+      <h1 class="poemHeader">Poem of the Day</h1>
+      <div class="letter poemHeader">
+        <h3 data-th-text="${p.title}"></h3>
+        <h6> - <span data-th-text="${p.author}"></span></h6>
+
+        <br>
+        <p data-th-text="${p.lines}"></p>
+      
+      </div>
+    </section>
+
     <!-- Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
