Created placeholder profile image if none is given

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -74,7 +74,7 @@
         <br>
         <form action="/editUser" method="POST">
           <button
-          type="button"
+          type="submit"
           class="btn btn-outline-secondary"
           data-mdb-ripple-color="dark"
           style="z-index: 1"
@@ -85,7 +85,7 @@
 
       <form action="/deleteUser" method="POST">
         <button
-        type="button"
+        type="submit"
         class="btn btn-outline-danger"
         data-mdb-ripple-color="dark"
         style="z-index: 1"
