--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -19,8 +19,9 @@
     <div class="container-fluid">
       <a class="navbar-brand" th:href="@{/profile}">
         <img
-          src="https://media.istockphoto.com/vectors/default-profile-picture-avatar-photo-placeholder-vector-illustration-vector-id1223671392?k=20&m=1223671392&s=170667a&w=0&h=kEAA35Eaz8k8A3qAGkuY8OZxpfvn9653gDjQwDHZGPE="
-          alt="Avatar Logo" style="width: 40px" class="rounded-pill" />
+        data-th-src="@{${userDetails.profile}}"
+          alt="Profile"
+          style="width: 50px; height: 50px" class="rounded-circle" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
