--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
     <section>
         <div class="container">
           <h1>Welcome Back</h1>
-          <h1 data-th-text="${userDetails.username}"></h1>
+          <h1 data-th-text="${#strings.capitalize(userDetails.username)}"></h1>
         </div>
     </section>
 
