--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,7 @@
       th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}"
     />
 
+
     <title>Book Tribe</title>
   </head>
   <body>
@@ -62,7 +63,11 @@
                   <span style="color: hsl(218, 86%, 62%)">Tribe</span>
                 </h1>
 
-                <form data-th-action="@{/login}" method="POST" th:object="${user}">
+                <form
+                  data-th-action="@{/login}"
+                  method="POST"
+                  th:object="${user}"
+                >
                   <!-- User Login -->
                   <div class="form-outline mb-4">
                     <label for="user">Email:</label>
@@ -84,12 +89,23 @@
                       class="form-control"
                     />
                   </div>
-                  
+
                   <!-- Submit button -->
                   <button type="submit" class="btn btn-primary btn-block mb-4">
                     Log In
                   </button>
                 </form>
+
+                <!-- Bootstrap Toast Alert -->
+                <!-- <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                  <div class="d-flex">
+                    <div class="toast-body">
+                    <span data-th-text="${errorMessage}"></span>
+                   </div>
+                    <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                  </div>
+                </div> -->
+
                 <div class="text-center">
                   <form th:action="@{/register}" method="POST">
                     <p>
@@ -109,12 +125,16 @@
         </div>
       </div>
     </div>
+    <div>
+    </div>
 
     <footer class="bg-light text-center text-lg-start">
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: #bc9a85">
         © 2022 Copyright:
-        <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
+        <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe">
+          Developed by Chrysalis
+        </a>
       </div>
       <!-- Copyright -->
     </footer>
@@ -124,5 +144,8 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+
+    <script th:src="@{/js/login.js}"></script>
+
   </body>
 </html>
