Added in Bootstrap Toast to show alert

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -113,7 +113,7 @@
           <div class="col-lg-6">
             <h1 class="display-4"> Be Inspired </h1>
             <p class="lead"> Be inspired by a random quote of the day and a poem written by famous authors and poets all over the world throughout history. </p>
-            <a th:href="@{/inspiration}" class="btn btn-outline-dark"> Get Inspiration </a>
+            <a th:href="@{/inspire}" class="btn btn-outline-dark"> Get Inspiration </a>
           </div>
 
           <div class="col-lg-6">
