--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,239 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS -->
-    <link
-      th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link th:href="@{/styles/profile.css}" rel="stylesheet" />
-    <link
-      th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}"
-    />
-    <title>Book Tribe</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #6c584c">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" style="color: white" th:href="@{/profile}"><i class="bi bi-house-heart-fill"></i> Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" style="color: white" th:href="@{/goals}"><i class="bi bi-bookmark-heart-fill"></i> Reading Goals </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" style="color: white" th:href="@{/tribe}"><i class="bi bi-person-hearts"></i> Book Tribe </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" style="color: white" th:href="@{/inspire}"><i class="bi bi-moon-stars-fill"></i> Inspire </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" style="color: white" th:href="@{/about}"><i class="bi bi-book-half"></i> About </a>
-            </li>
-          </ul>
-          <form class="d-flex" action="/search" method="GET">
-            <input class="form-control me-2" type="text" name="book" id="book" placeholder="Book Name">
-            <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
-          </form>
-          <div style="margin-left: 50px;">
-            <form class="d-flex" action="/logout" method="post">
-              <button class="btn btn-outline-light" type="submit"><i class="bi bi-door-closed-fill"></i> Logout</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </nav>
 
-    <div
-      class="rounded-top text-white d-flex flex-row"
-      style="background-color: #6c584c; height: 200px" 
-    >
-      <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px; height: 100px">
-        
-        <img
-        data-th-src="@{${userDetails.profile}}"
-          alt="Profile"
-          class="img-fluid img-thumbnail mt-4 mb-2"
-          style="width: 200px; z-index: 1"
-        />
-      </div>
-      <div class="ms-3" style="margin-top: 130px">
-        <h5 data-th-text="${#strings.capitalize(userDetails.username)}"></h5>
-        <p data-th-text="${userDetails.email}"></p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Bootstrap CSS -->
+  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link th:href="@{/styles/profile.css}" rel="stylesheet" />
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}" rel="stylesheet" />
+  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}" />
+  <title>Book Tribe</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #6c584c">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/profile}"><i class="bi bi-house-heart-fill"></i> Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/goals}"><i class="bi bi-bookmark-heart-fill"></i>
+              Reading Goals </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/tribe}"><i class="bi bi-person-hearts"></i> Book Tribe
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/inspire}"><i class="bi bi-moon-stars-fill"></i> Inspire
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/about}"><i class="bi bi-book-half"></i> About </a>
+          </li>
+        </ul>
+        <form class="d-flex" action="/search" method="GET">
+          <input class="form-control me-2" type="text" name="book" id="book" placeholder="Book Name">
+          <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
+        </form>
+        <div style="margin-left: 50px;">
+          <form class="d-flex" action="/logout" method="post">
+            <button class="btn btn-outline-light" type="submit"><i class="bi bi-door-closed-fill"></i> Logout</button>
+          </form>
+        </div>
       </div>
     </div>
-    
-    <div class="p-4 text-black">
-      <div class="d-flex justify-content-end text-center py-1">
-        <div class="mb-1 h5">
-            <form action="/editUser" method="POST">
-              <button
-              type="submit"
-              class="btn btn-outline-secondary"
-              data-mdb-ripple-color="dark"
-              style="z-index: 1"
-              >
-              Edit profile
-              </button>
-            </form>
-        </div>
+  </nav>
 
-        <button type="submit" class="btn btn-outline-danger" data-mdb-ripple-color="dark" style="z-index: 1" id="toastbtn">Delete Profile</button>
-  
-        <div class="toast">
-          <div class="toast-header">
-            <strong class="me-auto">Toast Header</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
-          </div>
-          <div class="toast-body">
-            <p>Some text inside the toast body</p>
-          </div>
-        </div>
+  <div class="rounded-top text-white d-flex flex-row" style="background-color: #6c584c; height: 200px">
+    <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px; height: 100px">
 
-        <!-- <div class="mb-1 h5 px-2"> -->
-          <!-- <form action="/deleteUser" method="POST"> -->
-            <!-- <button
-            type="submit"
-            class="btn btn-outline-danger"
-            data-mdb-ripple-color="dark"
-            style="z-index: 1"
-            >
-            Delete profile
-            </button> -->
-            <!-- <button type="submit" class="btn btn-outline-danger" data-mdb-ripple-color="dark" style="z-index: 1" id="delete">Delete Profile</button> -->
+      <img data-th-src="@{${userDetails.profile}}" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2"
+        style="width: 200px; z-index: 1" />
+    </div>
+    <div class="ms-3" style="margin-top: 130px">
+      <h5 data-th-text="${#strings.capitalize(userDetails.username)}"></h5>
+      <p data-th-text="${userDetails.email}"></p>
+    </div>
+  </div>
 
-          <!-- </form> -->
-        <!-- </div> -->
+  <div class="p-4 text-black">
+    <div class="d-flex justify-content-end text-center py-1">
+      <div class="mb-1 h5">
+        <form action="/editUser" method="POST">
+          <button type="submit" class="btn btn-outline-secondary" data-mdb-ripple-color="dark" style="z-index: 1">
+            Edit profile
+          </button>
+        </form>
+      </div>
 
-        <!-- <button type="button" class="btn btn-primary" id="myBtn">Show Toast</button> -->
-    
-        <!-- <div class="toast" id="popup">
+      <div class="mb-1 h5 px-2">
+        <!-- button to initialize toast -->
+        <button type="button" class="btn btn-outline-danger" id="toastbtn">Delete Profile</button>
+        <!-- Toast -->
+        <!-- Flexbox container for aligning the toasts -->
+        <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
+
+          <!-- Then put toasts within -->
+          <div id="toastNotice" class="toast" role="alert">
             <div class="toast-header">
-                <strong class="me-auto"><i class="bi bi-exclamation-diamond-fill"></i>Warning!</strong>
-                <small>Read carefully before proceeding</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+              <i class="bi bi-exclamation-triangle-fill" style="color: red;"></i>
+
+              <strong class="me-auto" style="color: red;">WARNING</strong>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
-                Are you sure you want to delete your profile? All data connected to this profile will be lost if you do. 
-                <form action="/deleteUser" method="POST">
-                  <button
-                  type="submit"
-                  class="btn btn-outline-danger"
-                  data-mdb-ripple-color="dark"
-                  style="z-index: 1"
-                  >
-                  Yes! Delete My Profile
-                  </button> 
-                </form>
-            </div>
-        </div> -->
+              <strong class="me-auto">DELETE ACCOUNT</strong>
+              <p>Are you sure you want to delete your account?</p>
+              <p>If you delete your account, you will permanently lose your profile and all data associated with it.</p>
 
-      </div>
-    </div>
-
-    <div class="card-body p-4 text-black">
-      <div class="mb-5">
-        <p class="lead fw-normal mb-1">
-          What would you like to do today
-          <span data-th-text="${#strings.capitalize(userDetails.username)}"></span>?
-        </p>
-
-        <div class="row" style="padding-top: 30px;">
-          <div class="col">
-            <form action="/goals" method="GET">
-              <button
-                type="submit"
-                class="btn btn-outline-dark"
-                data-mdb-ripple-color="dark"
-              >
-                Reading Goals
-              </button>
-            </form>
-          </div>
-          <div class="col">
-            <form action="/tribe" method="GET">
-              <button
-                type="submit"
-                class="btn btn-outline-dark"
-                data-mdb-ripple-color="dark"
-              >
-                Book Tribe
-              </button>
-            </form>
-          </div>
-          <div class="col">
-            <form action="/inspire" method="GET">
-              <button
-                type="submit"
-                class="btn btn-outline-dark"
-                data-mdb-ripple-color="dark"
-              >
-                Be Inspired
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div>
-        <p class="lead fw-normal mb-1">
-          Bookshelf
-        </p>
-        <div class="container px-4">
-          <div class="container" style="padding-top: 30px;">
-            <div class="row gx-5">
-              <div class="col-4">
-                <div class="p-3 book books-1"></div>
-              </div>
-              <div class="col-4">
-                <div class="p-3 book books-1"></div>
-              </div>
-              <div class="col-4">
-                <div class="p-3 book books-1"></div>
-              </div>
-              <div class="bookshelf"></div>
+              <form action="/deleteUser" method="POST">
+                <div class="mt-2 pt-2 border-top lh-base">
+                  <button type="submit" class="btn btn-danger">Delete Account</button>
+                  <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="toast">Cancel</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-      <a href="https://dribbble.com/YancyMin" class="dr-url" target="_blank"
-        ><img
-          class="dr"
-          src="https://cdn.dribbble.com/assets/logo-footer-hd-a05db77841b4b27c0bf23ec1378e97c988190dfe7d26e32e1faea7269f9e001b.png"
-          alt=""
-      /></a>
-    </div>
+  <div class="card-body p-4 text-black">
+    <div class="mb-5">
+      <p class="lead fw-normal mb-1">
+        What would you like to do today
+        <span data-th-text="${#strings.capitalize(userDetails.username)}"></span>?
+      </p>
 
-
-    <footer class="bg-light text-center text-lg-start">
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #bc9a85">
-        © 2022 Copyright:
-        <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
+      <div class="row" style="padding-top: 30px;">
+        <div class="col">
+          <form action="/goals" method="GET">
+            <button type="submit" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+              Reading Goals
+            </button>
+          </form>
+        </div>
+        <div class="col">
+          <form action="/tribe" method="GET">
+            <button type="submit" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+              Book Tribe
+            </button>
+          </form>
+        </div>
+        <div class="col">
+          <form action="/inspire" method="GET">
+            <button type="submit" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+              Be Inspired
+            </button>
+          </form>
+        </div>
       </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    </div>
+    <div>
+      <p class="lead fw-normal mb-1">
+        Bookshelf
+      </p>
+      <div class="container px-4">
+        <div class="container" style="padding-top: 30px;">
+          <div class="row gx-5">
+            <div class="col-4">
+              <div class="p-3 book books-1"></div>
+            </div>
+            <div class="col-4">
+              <div class="p-3 book books-1"></div>
+            </div>
+            <div class="col-4">
+              <div class="p-3 book books-1"></div>
+            </div>
+            <div class="bookshelf"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script data-th-src="@{/js/profile.js}"></script>
+  <a href="https://dribbble.com/YancyMin" class="dr-url" target="_blank"><img class="dr"
+      src="https://cdn.dribbble.com/assets/logo-footer-hd-a05db77841b4b27c0bf23ec1378e97c988190dfe7d26e32e1faea7269f9e001b.png"
+      alt="" /></a>
+  </div>
 
-  </body>
+
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: #bc9a85">
+      © 2022 Copyright:
+      <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+  <script data-th-src="@{/js/profile.js}"></script>
+
+</body>
+
 </html>
