--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -88,7 +88,8 @@
               <br>
               <div class="bk-info">
                 <form th:action="@{/favourite}" method="POST">
-                  <button class="bk-bookback" type="submit" name="submit"><i class="bi bi-bookmark-heart-fill"></i>
+                  <input type="hidden" name="favourite" data-th-value="${r.id}">
+                  <button class="bk-bookback" type="submit"><i class="bi bi-bookmark-heart-fill"></i>
                     Favourite</button>
                 </form>
               </div>
