Fixed errors in book page

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -88,7 +88,7 @@
               <br>
               <div class="bk-info">
                 <form th:action="@{/favourite}" method="POST">
-                  <input type="hidden" name="favourite" data-th-value="${r.id}">
+                  <input type="hidden" name="favourite" data-th-value="${d.id}">
                   <button class="bk-bookback" type="submit"><i class="bi bi-bookmark-heart-fill"></i>
                     Favourite</button>
                 </form>
