--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -62,7 +62,7 @@
         </div>
         <div class="form-group">
           <label for="formFile" class="form-label">Upload Link To Profile Picture</label>
-          <input class="form-control item" name="profile" type="text" placeholder="Profile Picture URL" aria-label="default input example">
+          <input class="form-control item" name="profile" type="text" data-th-value="${userDetails.profile}"aria-label="default input example">
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-block create-account">
