Changed the welcome page and profile page to show the username

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -111,7 +111,7 @@
     <div class="mb-5">
       <p class="lead fw-normal mb-1">
         What would you like to do today
-        <span data-th-text="${#strings.capitalize(userDetails.name)}"></span>?
+        <span data-th-text="${#strings.capitalize(userDetails.username)}"></span>?
       </p>
 
       <div class="row" style="padding-top: 30px;">
